# cpp

./: README.md
UAV_UGV_coordinated_operations/rviz_config/: rviz_config.rviz
UAV_UGV_coordinated_operations/scenes_vrep/: drone-bubblerob.ttt  drone-bubblerob_backup.ttt
UAV_UGV_coordinated_operations/src/: README.md  drone-bubblerob.ttt
UAV_UGV_coordinated_operations/src/floor_nav/: CMakeLists.txt
UAV_UGV_coordinated_operations/src/floor_nav/cfg/: TaskGoToROI.cfg  TaskOrderLandingBack.cfg  TaskOrderTakeOff.cfg  TaskSetSuction.cfg  TaskWaitForInterruption.cfg  TaskWaitForLandingRequest.cfg  TaskWaitForNewROI.cfg  TaskWaitForTakeOffRequest.cfg  TaskWaitingForLanding.cfg  TaskWaitingForRecovery.cfg  TaskWaitingForTakeOff.cfg
UAV_UGV_coordinated_operations/src/floor_nav/include/floor_nav/: SimTasksEnv.h
UAV_UGV_coordinated_operations/src/floor_nav/launch/: launch_vrep.launch  launch_vrep_husky.launch
UAV_UGV_coordinated_operations/src/floor_nav/missions/: mission.py  test.py  test_goto.py  test_landing.py  test_set_heading.py  test_sync.py  test_sync_im.py  test_takeOff.py  test_wander.py  test_wandering.py
UAV_UGV_coordinated_operations/src/floor_nav/src/: SimTasksEnv.cpp
UAV_UGV_coordinated_operations/src/floor_nav/tasks/: TaskGoToROI.cpp  TaskGoToROI.h  TaskOrderLandingBack.cpp  TaskOrderLandingBack.h  TaskOrderTakeOff.cpp  TaskOrderTakeOff.h  TaskSetHeading.cpp  TaskSetHeading.h  TaskSetSuction.cpp  TaskSetSuction.h  TaskWaitForInterruption.cpp  TaskWaitForInterruption.h  TaskWaitForLandingRequest.cpp  TaskWaitForLandingRequest.h  TaskWaitForNewROI.cpp  TaskWaitForNewROI.h  TaskWaitForTakeOffRequest.cpp  TaskWaitForTakeOffRequest.h  TaskWaitingForLanding.cpp  TaskWaitingForLanding.h  TaskWaitingForRecovery.cpp  TaskWaitingForRecovery.h  TaskWaitingForTakeOff.cpp  TaskWaitingForTakeOff.h
UAV_UGV_coordinated_operations/src/scenes/: drone-bubblerob.ttt
UAV_UGV_coordinated_operations/src/task_manager_bonirob/: CMakeLists.txt  mainpage.dox  package.xml
UAV_UGV_coordinated_operations/src/task_manager_bonirob/cfg/: TaskGoTo.cfg  TaskReachAngle.cfg  TaskWaitForROI.cfg
UAV_UGV_coordinated_operations/src/task_manager_bonirob/include/task_manager_bonirob/: BonirobEnv.h
UAV_UGV_coordinated_operations/src/task_manager_bonirob/launch/: launch_server.launch
UAV_UGV_coordinated_operations/src/task_manager_bonirob/missions/: mission.py  mission_cond.py  mission_square.py
UAV_UGV_coordinated_operations/src/task_manager_bonirob/src/: BonirobEnv.cpp  task_server.cpp
UAV_UGV_coordinated_operations/src/task_manager_bonirob/tasks/: TaskGoTo.cpp  TaskGoTo.h  TaskReachAngle.cpp  TaskReachAngle.h  TaskWaitForROI.cpp  TaskWaitForROI.h
UAV_UGV_coordinated_operations/src/task_manager_uav/: CMakeLists.txt  mainpage.dox  package.xml
UAV_UGV_coordinated_operations/src/task_manager_uav/cfg/: TaskGoTo.cfg  TaskReachAngle.cfg  TaskWaitForROI.cfg
UAV_UGV_coordinated_operations/src/task_manager_uav/include/task_manager_uav/: UAVEnv.h
UAV_UGV_coordinated_operations/src/task_manager_uav/launch/: launch_server.launch
UAV_UGV_coordinated_operations/src/task_manager_uav/missions/: mission.py  mission_cond.py  mission_square.py
UAV_UGV_coordinated_operations/src/task_manager_uav/src/: UAVEnv.cpp  task_server.cpp
UAV_UGV_coordinated_operations/src/task_manager_uav/tasks/: TaskGoTo.cpp  TaskGoTo.h  TaskReachAngle.cpp  TaskReachAngle.h  TaskWaitForROI.cpp  TaskWaitForROI.h
UAV_UGV_coordinated_operations/src/task_manager_uavsim/: CMakeLists.txt  package.xml
UAV_UGV_coordinated_operations/src/task_manager_uavsim/cfg/: TaskAbortLanding.cfg  TaskGoTo.cfg  TaskLandingBack.cfg  TaskReachAngle.cfg  TaskRequestLanding.cfg  TaskRequestTakeOff.cfg  TaskSetMotor.cfg  TaskSpotMarkers.cfg  TaskTakeOff.cfg  TaskWaitForChargedBattery.cfg  TaskWaitForLandingBackOrder.cfg  TaskWaitForLowBatteryLevel.cfg  TaskWaitForROI.cfg  TaskWaitForTakeOffOrder.cfg
UAV_UGV_coordinated_operations/src/task_manager_uavsim/include/task_manager_uavsim/: UAVEnv.h
UAV_UGV_coordinated_operations/src/task_manager_uavsim/launch/: launch_server.launch  launch_server_AR.launch
UAV_UGV_coordinated_operations/src/task_manager_uavsim/missions/: .test_sync_im.py.swo  demo_landing.py  demo_landing_.py  mission.py  mission_cond.py  mission_square.py  test.py  test_sync_im_uav.py
UAV_UGV_coordinated_operations/src/task_manager_uavsim/src/: UAVEnv.cpp  task_server.cpp
UAV_UGV_coordinated_operations/src/task_manager_uavsim/tasks/: TaskAbortLanding.cpp  TaskAbortLanding.h  TaskGoTo.cpp  TaskGoTo.h  TaskLandingBack.cpp  TaskLandingBack.h  TaskReachAngle.cpp  TaskReachAngle.h  TaskRequestLanding.cpp  TaskRequestLanding.h  TaskRequestTakeOff.cpp  TaskRequestTakeOff.h  TaskSetMotor.cpp  TaskSetMotor.h  TaskSpotMarkers.cpp  TaskSpotMarkers.h  TaskTakeOff.cpp  TaskTakeOff.h  TaskWaitForChargedBattery.cpp  TaskWaitForChargedBattery.h  TaskWaitForLandingBackOrder.cpp  TaskWaitForLandingBackOrder.h  TaskWaitForLowBatteryLevel.cpp  TaskWaitForLowBatteryLevel.h  TaskWaitForROI.cpp  TaskWaitForROI.h  TaskWaitForTakeOffOrder.cpp  TaskWaitForTakeOffOrder.h
UAV_UGV_coordinated_operations/src/vrep_ros_teleop/launch/: teleopDrone.launch  teleop_mux.launch
dynamic_array/: CMakeLists.txt  README.md  main.cc
dynamic_array/src/: array.cc  array.h  simple_string.cc  simple_string.h
vector3/: CMakeLists.txt  README.md  main.cc
vector3/src/: vector3.cc  vector3.h
vending_machine/: README.md  run_tests.py
vending_machine/cpp/: CMakeLists.txt  main.cc
vending_machine/cpp/src/: Product.cc  Product.h  Transaction.cc  Transaction.h  VendingMachine.cc  VendingMachine.h
vending_machine/src/: vending.py
vending_machine/test/01/: expected.json  inventory.json  output.json  transactions.json
vending_machine/test/02/: expected.json  output.json  transactions.json
vending_machine/test/03/: expected.json  output.json  transactions.json
vending_machine/test/04/: expected.json  inventory.json  output.json  transactions.json
